@@ -12,6 +12,7 @@ package org.elasticsearch.telemetry.apm;
 import io.opentelemetry.api.common.Attributes;
 import io.opentelemetry.api.metrics.DoubleCounter;
 import io.opentelemetry.api.metrics.DoubleCounterBuilder;
+import io.opentelemetry.api.metrics.DoubleGauge;
 import io.opentelemetry.api.metrics.DoubleGaugeBuilder;
 import io.opentelemetry.api.metrics.DoubleHistogram;
 import io.opentelemetry.api.metrics.DoubleHistogramBuilder;
@@ -19,6 +20,7 @@ import io.opentelemetry.api.metrics.DoubleUpDownCounter;
 import io.opentelemetry.api.metrics.DoubleUpDownCounterBuilder;
 import io.opentelemetry.api.metrics.LongCounter;
 import io.opentelemetry.api.metrics.LongCounterBuilder;
+import io.opentelemetry.api.metrics.LongGauge;
 import io.opentelemetry.api.metrics.LongGaugeBuilder;
 import io.opentelemetry.api.metrics.LongHistogram;
 import io.opentelemetry.api.metrics.LongHistogramBuilder;
@@ -38,7 +40,6 @@ import io.opentelemetry.context.Context;
 import org.elasticsearch.telemetry.InstrumentType;
 import org.elasticsearch.telemetry.MetricRecorder;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Queue;
@@ -148,6 +149,13 @@ public class RecordingOtelMeter implements Meter {
         }
 
         @Override
+        public boolean isEnabled() {
+            // This is goofy: LongCounter and LongUpDownCounter both offer default isEnabled methods,
+            // so we're forced to implement this, yet we're not forced to choose one.
+            return super.isEnabled();
+        }
+
+        @Override
         public void add(long value) {
             assert value >= 0;
             super.add(value);
@@ -230,6 +238,13 @@ public class RecordingOtelMeter implements Meter {
         }
 
         @Override
+        public boolean isEnabled() {
+            // This is goofy: LongCounter and LongUpDownCounter both offer default isEnabled methods,
+            // so we're forced to implement this, yet we're not forced to choose one.
+            return super.isEnabled();
+        }
+
+        @Override
         public void add(double value) {
             assert value >= 0;
             super.add(value);
@@ -302,7 +317,7 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public void add(long value) {
-            recorder.call(instrument, name, value, null);
+            recorder.call(instrument, name, value, Map.of());
         }
 
         @Override
@@ -366,7 +381,7 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public void add(double value) {
-            recorder.call(instrument, name, value, null);
+            recorder.call(instrument, name, value, Map.of());
         }
 
         @Override
@@ -403,10 +418,10 @@ public class RecordingOtelMeter implements Meter {
 
         Map<String, Object> toMap(Attributes attributes) {
             if (attributes == null) {
-                return null;
+                return Map.of();
             }
             if (attributes.isEmpty()) {
-                return Collections.emptyMap();
+                return Map.of();
             }
             Map<String, Object> map = new HashMap<>(attributes.size());
             attributes.forEach((k, v) -> map.put(k.getKey(), v));
@@ -469,9 +484,16 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public ObservableDoubleGauge buildWithCallback(Consumer<ObservableDoubleMeasurement> callback) {
-            DoubleGaugeRecorder gauge = new DoubleGaugeRecorder(name, callback);
+            DoubleAsyncGaugeRecorder gauge = new DoubleAsyncGaugeRecorder(name, callback);
             recorder.register(gauge, gauge.getInstrument(), name, description, unit);
             callbacks.add(gauge);
+            return gauge;
+        }
+
+        @Override
+        public DoubleGauge build() {
+            DoubleGaugeRecorder gauge = new DoubleGaugeRecorder(name);
+            recorder.register(gauge, gauge.getInstrument(), name, description, unit);
             return gauge;
         }
 
@@ -483,11 +505,32 @@ public class RecordingOtelMeter implements Meter {
         }
     }
 
-    private class DoubleGaugeRecorder extends AbstractInstrument implements ObservableDoubleGauge, Callback, OtelInstrument {
+    private class DoubleGaugeRecorder extends AbstractInstrument implements DoubleGauge, OtelInstrument {
+        DoubleGaugeRecorder(String name) {
+            super(name, InstrumentType.DOUBLE_GAUGE);
+        }
+
+        @Override
+        public void set(double value) {
+            recorder.call(instrument, name, value, Map.of());
+        }
+
+        @Override
+        public void set(double value, Attributes attributes) {
+            recorder.call(instrument, name, value, toMap(attributes));
+        }
+
+        @Override
+        public void set(double value, Attributes attributes, Context context) {
+            recorder.call(instrument, name, value, toMap(attributes));
+        }
+    }
+
+    private class DoubleAsyncGaugeRecorder extends AbstractInstrument implements ObservableDoubleGauge, Callback, OtelInstrument {
         final Consumer<ObservableDoubleMeasurement> callback;
 
-        DoubleGaugeRecorder(String name, Consumer<ObservableDoubleMeasurement> callback) {
-            super(name, InstrumentType.DOUBLE_GAUGE);
+        DoubleAsyncGaugeRecorder(String name, Consumer<ObservableDoubleMeasurement> callback) {
+            super(name, InstrumentType.DOUBLE_ASYNC_GAUGE);
             this.callback = callback;
         }
 
@@ -507,12 +550,12 @@ public class RecordingOtelMeter implements Meter {
         }
 
         DoubleMeasurementRecorder(String name) {
-            super(name, InstrumentType.DOUBLE_GAUGE);
+            super(name, InstrumentType.DOUBLE_ASYNC_GAUGE);
         }
 
         @Override
         public void record(double value) {
-            recorder.call(instrument, name, value, null);
+            recorder.call(instrument, name, value, Map.of());
         }
 
         @Override
@@ -540,9 +583,16 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public ObservableLongGauge buildWithCallback(Consumer<ObservableLongMeasurement> callback) {
-            LongGaugeRecorder gauge = new LongGaugeRecorder(name, callback);
+            LongAsyncGaugeRecorder gauge = new LongAsyncGaugeRecorder(name, callback);
             recorder.register(gauge, gauge.getInstrument(), name, description, unit);
             callbacks.add(gauge);
+            return gauge;
+        }
+
+        @Override
+        public LongGauge build() {
+            LongGaugeRecorder gauge = new LongGaugeRecorder(name);
+            recorder.register(gauge, gauge.getInstrument(), name, description, unit);
             return gauge;
         }
 
@@ -554,11 +604,32 @@ public class RecordingOtelMeter implements Meter {
         }
     }
 
-    private class LongGaugeRecorder extends AbstractInstrument implements ObservableLongGauge, Callback, OtelInstrument {
+    private class LongGaugeRecorder extends AbstractInstrument implements LongGauge, OtelInstrument {
+        LongGaugeRecorder(String name) {
+            super(name, InstrumentType.LONG_GAUGE);
+        }
+
+        @Override
+        public void set(long value) {
+            recorder.call(instrument, name, value, Map.of());
+        }
+
+        @Override
+        public void set(long value, Attributes attributes) {
+            recorder.call(instrument, name, value, toMap(attributes));
+        }
+
+        @Override
+        public void set(long value, Attributes attributes, Context context) {
+            recorder.call(instrument, name, value, toMap(attributes));
+        }
+    }
+
+    private class LongAsyncGaugeRecorder extends AbstractInstrument implements ObservableLongGauge, Callback, OtelInstrument {
         final Consumer<ObservableLongMeasurement> callback;
 
-        LongGaugeRecorder(String name, Consumer<ObservableLongMeasurement> callback) {
-            super(name, InstrumentType.LONG_GAUGE);
+        LongAsyncGaugeRecorder(String name, Consumer<ObservableLongMeasurement> callback) {
+            super(name, InstrumentType.LONG_ASYNC_GAUGE);
             this.callback = callback;
         }
 
@@ -578,12 +649,12 @@ public class RecordingOtelMeter implements Meter {
         }
 
         LongMeasurementRecorder(String name) {
-            super(name, InstrumentType.LONG_GAUGE);
+            super(name, InstrumentType.LONG_ASYNC_GAUGE);
         }
 
         @Override
         public void record(long value) {
-            recorder.call(instrument, name, value, null);
+            recorder.call(instrument, name, value, Map.of());
         }
 
         @Override
@@ -630,7 +701,7 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public void record(double value) {
-            recorder.call(getInstrument(), name, value, null);
+            recorder.call(getInstrument(), name, value, Map.of());
         }
 
         @Override
@@ -677,7 +748,7 @@ public class RecordingOtelMeter implements Meter {
 
         @Override
         public void record(long value) {
-            recorder.call(getInstrument(), name, value, null);
+            recorder.call(getInstrument(), name, value, Map.of());
         }
 
         @Override
