@@ -7,16 +7,16 @@
 
 package org.elasticsearch.xpack.esql.qa.orc;
 
-import org.elasticsearch.core.PathUtils;
 import org.elasticsearch.test.cluster.ElasticsearchCluster;
+import org.elasticsearch.test.cluster.FeatureFlag;
 import org.elasticsearch.test.cluster.local.LocalClusterConfigProvider;
 import org.elasticsearch.test.cluster.local.distribution.DistributionType;
+import org.elasticsearch.xpack.esql.datasources.Federation;
+import org.elasticsearch.xpack.esql.datasources.FixtureUtils;
+import org.elasticsearch.xpack.esql.qa.rest.EsqlDataSourceMixedClusterTestSupport;
 
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.function.Supplier;
 
-import static org.elasticsearch.xpack.esql.datasources.FixtureUtils.FIXTURES_RESOURCE_PATH;
 import static org.elasticsearch.xpack.esql.datasources.S3FixtureUtils.ACCESS_KEY;
 import static org.elasticsearch.xpack.esql.datasources.S3FixtureUtils.SECRET_KEY;
 
@@ -29,12 +29,15 @@ public class Clusters {
         return ElasticsearchCluster.local()
             .distribution(DistributionType.DEFAULT)
             .shared(true)
+            .plugin("inference-service-test")
             .module("repository-s3")
             .module("repository-gcs")
             .setting("xpack.security.enabled", "false")
             .setting("xpack.license.self_generated.type", "trial")
+            .setting(Federation.FEDERATION_ENABLED.getKey(), "true")
             .setting("xpack.ml.enabled", "false")
-            .setting("path.repo", fixturesPath())
+            .setting("path.repo", FixtureUtils.pathRepoRootForIcebergFixtures(Clusters.class))
+            .setting("esql.external.local_allowed_paths", FixtureUtils.pathRepoRootForIcebergFixtures(Clusters.class))
             .setting("s3.client.default.endpoint", s3EndpointSupplier)
             .keystore("s3.client.default.access_key", ACCESS_KEY)
             .keystore("s3.client.default.secret_key", SECRET_KEY)
@@ -52,15 +55,33 @@ public class Clusters {
         return testCluster(s3EndpointSupplier, config -> {});
     }
 
-    private static String fixturesPath() {
-        URL resourceUrl = Clusters.class.getResource(FIXTURES_RESOURCE_PATH);
-        if (resourceUrl != null && resourceUrl.getProtocol().equals("file")) {
-            try {
-                return PathUtils.get(resourceUrl.toURI()).toAbsolutePath().toString();
-            } catch (URISyntaxException e) {
-                throw new IllegalStateException("Failed to resolve fixtures path", e);
-            }
-        }
-        return System.getProperty("java.io.tmpdir");
+    /**
+     * Mixed old/current variant used only by the reusable data-source BWC tasks.
+     */
+    public static ElasticsearchCluster bwcTestCluster(Supplier<String> s3EndpointSupplier) {
+        String fixturesPath = FixtureUtils.pathRepoRootForIcebergFixtures(Clusters.class);
+        return EsqlDataSourceMixedClusterTestSupport.mixedCluster(
+            () -> fixturesPath,
+            builder -> builder.module("repository-s3")
+                .module("repository-gcs")
+                .setting("xpack.security.enabled", "false")
+                .setting("xpack.license.self_generated.type", "trial")
+                .setting("xpack.ml.enabled", "false")
+                .setting("path.repo", fixturesPath)
+                .setting("s3.client.default.endpoint", s3EndpointSupplier)
+                .keystore("s3.client.default.access_key", ACCESS_KEY)
+                .keystore("s3.client.default.secret_key", SECRET_KEY)
+                .setting("s3.client.default.protocol", "http")
+                .environment("AWS_CONFIG_FILE", "/dev/null/aws/config")
+                .environment("AWS_SHARED_CREDENTIALS_FILE", "/dev/null/aws/credentials")
+                .jvmArg("--add-opens=java.base/java.nio=ALL-UNNAMED")
+                .jvmArg("-Darrow.allocation.manager.type=Unsafe")
+                .feature(FeatureFlag.ESQL_EXTERNAL_DATASOURCES_LOCAL)
+                .feature(FeatureFlag.ESQL_EXTERNAL_DATASOURCES_HTTP)
+                .feature(FeatureFlag.ESQL_EXTERNAL_GCS)
+                .feature(FeatureFlag.ESQL_EXTERNAL_AZURE)
+                .feature(FeatureFlag.ESQL_EXTERNAL_ORC),
+            (node, version, current) -> {}
+        );
     }
 }
