@@ -7,8 +7,10 @@
 
 package org.elasticsearch.xpack.esql.expression.function.aggregate;
 
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
+import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.compute.aggregation.AggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.CountAggregatorFunction;
 import org.elasticsearch.compute.aggregation.DenseVectorCountAggregatorFunction;
@@ -24,15 +26,23 @@ import org.elasticsearch.xpack.esql.core.util.StringUtils;
 import org.elasticsearch.xpack.esql.expression.SurrogateExpression;
 import org.elasticsearch.xpack.esql.expression.function.AggregateMetricDoubleNativeSupport;
 import org.elasticsearch.xpack.esql.expression.function.Example;
+import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesTo;
+import org.elasticsearch.xpack.esql.expression.function.FunctionAppliesToLifecycle;
+import org.elasticsearch.xpack.esql.expression.function.FunctionDefinition;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionType;
+import org.elasticsearch.xpack.esql.expression.function.OptionalArgument;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.expression.function.scalar.conditional.Case;
 import org.elasticsearch.xpack.esql.expression.function.scalar.convert.FromAggregateMetricDouble;
 import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToLong;
 import org.elasticsearch.xpack.esql.expression.function.scalar.histogram.ExtractHistogramComponent;
+import org.elasticsearch.xpack.esql.expression.function.scalar.histogram.HistogramFraction;
 import org.elasticsearch.xpack.esql.expression.function.scalar.multivalue.MvCount;
 import org.elasticsearch.xpack.esql.expression.function.scalar.nulls.Coalesce;
+import org.elasticsearch.xpack.esql.expression.predicate.nulls.IsNotNull;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.arithmetic.Mul;
+import org.elasticsearch.xpack.esql.expression.promql.function.PromqlFunctionDefinition;
 import org.elasticsearch.xpack.esql.planner.ToAggregator;
 
 import java.io.IOException;
@@ -40,15 +50,35 @@ import java.util.List;
 
 import static java.util.Collections.emptyList;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.DEFAULT;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isType;
 import static org.elasticsearch.xpack.esql.core.type.DataType.DENSE_VECTOR;
 import static org.elasticsearch.xpack.esql.core.type.DataType.EXPONENTIAL_HISTOGRAM;
 
-public class Count extends AggregateFunction implements ToAggregator, SurrogateExpression, AggregateMetricDoubleNativeSupport {
+public class Count extends AggregateFunction
+    implements
+        ToAggregator,
+        SurrogateExpression,
+        AggregateMetricDoubleNativeSupport,
+        OptionalArgument {
+    public static final TransportVersion ESQL_COUNT_HISTOGRAM_BUCKET = TransportVersion.fromName("esql_count_histogram_bucket");
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "Count", Count::new);
+    public static final FunctionDefinition DEFINITION = FunctionDefinition.def(Count.class)
+        .binary(Count::new)
+        .capabilities("flattened", "histogram_bucket")
+        .name("count");
+    public static final PromqlFunctionDefinition PROMQL_DEFINITION = PromqlFunctionDefinition.def()
+        .acrossSeries(Count::new)
+        .description("Counts the number of elements in the input vector.")
+        .example("count(http_requests_total)")
+        .stack(PromqlFunctionDefinition.STACK_PREVIEW_9_4_GA_9_5)
+        .differenceFromPrometheus(PromqlFunctionDefinition.COUNT_NOTE)
+        .name("count");
 
     @FunctionInfo(
+        appliesTo = { @FunctionAppliesTo(lifeCycle = FunctionAppliesToLifecycle.GA) },
         returnType = "long",
+        briefSummary = "Returns the total number of input values.",
         description = "Returns the total number (count) of input values.",
         type = FunctionType.AGGREGATE,
         examples = {
@@ -73,7 +103,41 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
                 You may see a pattern like `COUNT(<expression> OR NULL)`. This has the same meaning as
                 `COUNT() WHERE <expression>`. This relies on `COUNT(NULL)` to return `0` and builds on the
                 three-valued logic ({wikipedia}/Three-valued_logic[3VL]): `TRUE OR NULL` is `TRUE`, but
-                `FALSE OR NULL` is `NULL`. Prefer the `COUNT() WHERE <expression>` pattern.""", file = "stats", tag = "count-or-null") }
+                `FALSE OR NULL` is `NULL`. Prefer the `COUNT() WHERE <expression>` pattern.""", file = "stats", tag = "count-or-null"),
+            @Example(
+                description = "`COUNT` can also operate on `exponential_histogram` fields, "
+                    + "returning the total number of values which were used to construct the histograms.",
+                file = "exponential_histogram",
+                tag = "countExpHistoForDocs"
+            ),
+            @Example(
+                description = "`COUNT` can also operate on `tdigest` and casted `histogram` fields, "
+                    + "returning the total number of values which were used to construct the digests.",
+                file = "tdigest",
+                tag = "countTDigestForDocs"
+            ),
+            @Example(
+                description = """
+                    To count only the histogram values that fall into a range, pass a `double_range` (for example from
+                    [`TO_RANGE`](/reference/query-languages/esql/functions-operators/type-conversion-functions/to_range.md)) as the
+                    second argument. Combine this with
+                    [`BUCKET`](/reference/query-languages/esql/functions-operators/grouping-functions/bucket.md) on the same
+                    histogram field to create a histogram of the recorded values:""",
+                file = "exponential_histogram",
+                tag = "countBucketExpHistoForDocs",
+                explanation = """
+                    ::::{note}
+                    Histograms only record approximate value distributions, so the counts per bucket are estimates.
+                    ::::"""
+            ),
+            @Example(
+                description = "The same works for `tdigest` and casted `histogram` fields:",
+                file = "tdigest",
+                tag = "countBucketTDigestForDocs",
+                explanation = """
+                    A `tdigest` does not track which ranges between its centroids are empty, so `BUCKET` returns every bucket
+                    between the smallest and the largest centroid of a digest, and some of them may end up with a count of `0`."""
+            ) }
     )
     public Count(
         Source source,
@@ -88,8 +152,10 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
                 "exponential_histogram",
                 "date",
                 "date_nanos",
+                "date_range",
                 "dense_vector",
                 "double",
+                "double_range",
                 "geo_point",
                 "geo_shape",
                 "geohash",
@@ -98,23 +164,46 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
                 "integer",
                 "ip",
                 "keyword",
+                "flattened",
                 "long",
                 "tdigest",
                 "text",
                 "unsigned_long",
                 "version" },
             description = "Expression that outputs values to be counted. If omitted, equivalent to `COUNT(*)` (the number of rows)."
-        ) Expression field
+        ) Expression field,
+        @Param(
+            optional = true,
+            name = "bucket",
+            type = { "double_range" },
+            description = "Range of histogram values to count."
+        ) Expression bucket
     ) {
-        this(source, field, Literal.TRUE, NO_WINDOW);
+        this(source, field, Literal.TRUE, NO_WINDOW, bucket);
+    }
+
+    public Count(Source source, Expression field) {
+        this(source, field, null);
     }
 
     public Count(Source source, Expression field, Expression filter, Expression window) {
-        super(source, field, filter, window, emptyList());
+        this(source, field, filter, window, null);
+    }
+
+    public Count(Source source, Expression field, Expression filter, Expression window, Expression bucket) {
+        super(source, field, filter, window, bucket == null ? emptyList() : List.of(bucket));
     }
 
     private Count(StreamInput in) throws IOException {
         super(in);
+    }
+
+    @Override
+    public void writeTo(StreamOutput out) throws IOException {
+        if (bucket() != null && out.getTransportVersion().supports(ESQL_COUNT_HISTOGRAM_BUCKET) == false) {
+            throw new UnsupportedOperationException("version does not support count(histogram, bucket)");
+        }
+        super.writeTo(out);
     }
 
     @Override
@@ -124,17 +213,27 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
 
     @Override
     protected NodeInfo<Count> info() {
-        return NodeInfo.create(this, Count::new, field(), filter(), window());
+        return NodeInfo.create(this, Count::new, field(), filter(), window(), bucket());
     }
 
     @Override
     public AggregateFunction withFilter(Expression filter) {
-        return new Count(source(), field(), filter, window());
+        return new Count(source(), field(), filter, window(), bucket());
     }
 
     @Override
     public Count replaceChildren(List<Expression> newChildren) {
-        return new Count(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2));
+        return new Count(
+            source(),
+            newChildren.get(0),
+            newChildren.get(1),
+            newChildren.get(2),
+            newChildren.size() == 3 ? null : newChildren.get(3)
+        );
+    }
+
+    Expression bucket() {
+        return parameters().isEmpty() ? null : parameters().getFirst();
     }
 
     @Override
@@ -157,12 +256,22 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
 
     @Override
     protected TypeResolution resolveType() {
+        if (bucket() != null) {
+            return isType(
+                field(),
+                dt -> dt == EXPONENTIAL_HISTOGRAM || dt == DataType.TDIGEST,
+                sourceText(),
+                DEFAULT,
+                "exponential_histogram",
+                "tdigest"
+            ).and(isType(bucket(), dt -> dt == DataType.DOUBLE_RANGE, sourceText(), SECOND, "double_range"));
+        }
         return isType(
             field(),
-            dt -> dt.isCounter() == false && dt != DataType.HISTOGRAM && dt != DataType.DATE_RANGE,
+            dt -> dt.isCounter() == false && dt != DataType.HISTOGRAM,
             sourceText(),
             DEFAULT,
-            "any type except counter types, histogram, or date_range"
+            "any type except counter types or histogram"
         );
     }
 
@@ -170,14 +279,25 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
     public Expression surrogate() {
         var s = source();
         var field = field();
-        if (field.dataType() == DataType.AGGREGATE_METRIC_DOUBLE) {
-            return new Sum(
+        if (bucket() != null) {
+            Expression count = new Coalesce(
                 s,
-                FromAggregateMetricDouble.withMetric(source(), field, AggregateMetricDoubleBlockBuilder.Metric.COUNT),
-                filter(),
-                window(),
-                SummationMode.COMPENSATED_LITERAL
+                new ToLong(
+                    s,
+                    new HistogramFraction(
+                        s,
+                        new HistogramMerge(s, field, filter(), window()),
+                        bucket(),
+                        // Round cumulative counts before subtracting so errors cancel between adjacent buckets.
+                        Literal.integer(s, 0)
+                    )
+                ),
+                List.of(new Literal(s, 0L, DataType.LONG))
             );
+            return new Case(s, new IsNotNull(s, bucket()), List.of(count));
+        }
+        if (field.dataType() == DataType.AGGREGATE_METRIC_DOUBLE) {
+            return new Coalesce(s, AggregateMetricDoubleSurrogate(this), List.of(new Literal(s, 0L, DataType.LONG)));
         }
 
         if (field.dataType() == EXPONENTIAL_HISTOGRAM || field.dataType() == DataType.TDIGEST) {
@@ -217,5 +337,16 @@ public class Count extends AggregateFunction implements ToAggregator, SurrogateE
         }
 
         return null;
+    }
+
+    public static Expression AggregateMetricDoubleSurrogate(AggregateFunction af) {
+        var s = af.source();
+        return new Sum(
+            s,
+            FromAggregateMetricDouble.withMetric(s, af.field(), AggregateMetricDoubleBlockBuilder.Metric.COUNT),
+            af.filter(),
+            af.window(),
+            SummationMode.COMPENSATED_LITERAL
+        );
     }
 }
